tambah api pendapatan
